<resources>
    <string name="app_name">TASKY</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="task_name">Name</string>
    <string name="task_description">Description</string>
    <string name="task_source">Source</string>
    <string name="task_handler">Handler</string>
    <string name="task_start_time">Start Time</string>
    <string name="task_end_time">End Time</string>
    <string name="create">Create</string>
    <string name="btn_delete">Delete Task</string>
    <string name="btn_save">Save Changes</string>
    <string name="tab_profile">Profile</string>
    <string name="tab_task">Tasks</string>
    <string name="tab_group">Group</string>
    <string name="user_email">Email: </string>
    <string name="user_phone">Phone: </string>
    <string name="user_role">Role: </string>
    <string name="log_out">Log Out</string>
    <string name="task_filter">Filter</string>
    <string name="task_filter_apply">Apply</string>
    <string name="task_status">Status: </string>
</resources>
