<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".TaskCreationFragment">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/task_name"
        android:drawableLeft="@drawable/ic_subtitles"
        android:textStyle="bold"
        android:id="@+id/edtName"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtDescription"
        android:drawableLeft="@drawable/ic_description"
        android:hint="@string/task_description"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtSource"
        android:drawableLeft="@drawable/ic_attach_file_source"
        android:hint="@string/task_source"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtHandlerId"
        android:drawableLeft="@drawable/ic_profile"
        android:hint="@string/task_handler" />
    <fragment
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:name="baohg.taskmanager.DateRangePickerFragment"
        android:id="@+id/dateRangePickerFragment" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnCreate"
        android:gravity="center"
        android:textColor="@color/colorWhite"
        android:text="@string/create"
        android:drawableLeft="@drawable/ic_note_add"
        android:background="@color/colorPrimary"
        android:layout_gravity="center"/>


</LinearLayout>